<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.BankExercise"
    tools:context=".ui.accounts.AccountsFragment">

    <View
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/account_banner_top_bottom_margin"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_logo_dev_36dp"
        app:layout_constraintBottom_toBottomOf="@id/banner"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@id/banner"
        app:layout_constraintStart_toStartOf="@id/banner"
        app:layout_constraintTop_toTopOf="@+id/banner" />

    <TextView
        android:id="@+id/accountsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/account_banner_top_bottom_margin"
        android:gravity="center"
        android:text="@string/title_accounts"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/cardsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        tools:text="Accounts" />

    <TextView
        android:id="@+id/cardsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/account_banner_top_bottom_margin"
        android:gravity="center"
        android:text="@string/title_cards"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/accountsTitle"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        tools:text="Cards" />

    <LinearLayout
        android:id="@+id/_lists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/account_banner_top_bottom_margin"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/actionsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountsTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/accountsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:overScrollMode="never"
            tools:itemCount="3"
            tools:listitem="@layout/item_account" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:overScrollMode="never"
            tools:itemCount="8"
            tools:listitem="@layout/item_card" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/actions_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7" />

    <TextView
        android:id="@+id/actionsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_actions"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actions_guideline" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transferToFamily"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@id/transferToSavings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionsTitle">

        <ImageView
            android:id="@+id/_transferToFamilyImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_family_round_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/_transferToFamilyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/transfer_to_family"
            android:textSize="@dimen/list_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_transferToFamilyImage"
            tools:text="Transfer to \nMy Family" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transferToSavings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/depositCheck"
        app:layout_constraintStart_toEndOf="@id/transferToFamily"
        app:layout_constraintTop_toBottomOf="@id/actionsTitle">

        <ImageView
            android:id="@+id/_transferToSavingImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_savings_round_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/_transferToSavingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/transfer_to_savings"
            android:textSize="@dimen/list_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_transferToSavingImage"
            tools:text="Transfer to \nSavings" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/depositCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/transferToSavings"
        app:layout_constraintTop_toBottomOf="@id/actionsTitle">

        <ImageView
            android:id="@+id/_depositCheckImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_deposit_round_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/_depositCheckText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/deposit_a_check"
            android:textSize="@dimen/list_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_depositCheckImage"
            tools:text="Deposit a \nCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>